--- a/propensity.ipynb
+++ b/propensity.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "My purpose is to reframe their claims in the modern language of directed acyclic graphs. Specifically, I show how the propensity score is a collider, and how PSM tries to recreate a complete randomized experiment stratified along _Isopropenity Sets_ (defined below). This can indeed result in small sample bias, inefficiency, and model dependence.  However, the extent of the problem will likely depend on the specific PSM algorithm used, of which there are [many][4].\n",
     "\n",
-    "My hope is that a graphical approach will help some readers better understand the structural root causes of the problem. It certainly helped me!\n",
+    "My hope is that a graphical approach will help some readers better understand the structural, root causes of the problem. It certainly helped me!\n",
     "\n",
     "[1]:https://books.google.com/ngrams/graph?content=propensity+score%2Ccausal+inference%2Cdirected+acyclic+graphs&case_insensitive=on&year_start=1980&year_end=2008&corpus=15&smoothing=3&share=&direct_url=t4%3B%2Cpropensity%20score%3B%2Cc0%3B%2Cs0%3B%3Bpropensity%20score%3B%2Cc0%3B%3BPropensity%20Score%3B%2Cc0%3B%3BPropensity%20score%3B%2Cc0%3B.t4%3B%2Ccausal%20inference%3B%2Cc0%3B%2Cs0%3B%3Bcausal%20inference%3B%2Cc0%3B%3BCausal%20Inference%3B%2Cc0%3B%3BCausal%20inference%3B%2Cc0%3B%3BCAUSAL%20INFERENCE%3B%2Cc0%3B.t4%3B%2Cdirected%20acyclic%20graphs%3B%2Cc0%3B%2Cs0%3B%3Bdirected%20acyclic%20graphs%3B%2Cc0%3B%3BDirected%20Acyclic%20Graphs%3B%2Cc0%3B%3BDirected%20acyclic%20graphs%3B%2Cc0\n",
     "[2]:https://doi.org/10.1093/biomet/70.1.41\n",
